# sigma

./: .gitignore  AGENTS.md  README.md  numba-0.63.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  pyproject.toml  test_dependencies.py  verify_notebook_imports.py  verify_sigma.py
sigma/: __init__.py
sigma/core/: data.py  training.py
sigma/gui/: gui.py
sigma/models/: __init__.py  autoencoder.py
sigma/processing/: segmentation.py
sigma/utils/: __init__.py  base.py  load.py  loadtem.py  normalisation.py  physics.py  signal.py  visualisation.py
tests/: test_signal.py
tutorial/colab/: EXCITE_practical.ipynb
tutorial/local/: tutorial_image_autoencoder_GMM.ipynb  tutorial_image_umap_hdbscan.ipynb  tutorial_sem_autoencoder_GMM.ipynb  tutorial_sem_umap_hdbscan.ipynb  tutorial_tem_autoencoder_GMM.ipynb  tutorial_tem_emi_umap_hdbscan.ipynb  tutorial_tem_umap_hdbscan.ipynb
