[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emsigma"
version = "0.2.2"
description = "Spectral interpretation using Gaussian mixtures and autoencoder"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "Po-Yen Tung", email = "pyt21@cam.ac.uk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "notebook>=7.0.0",
    "torch>=2.2.0",
    "hyperspy>=2.3.0",
    "ipywidgets>=8.1.1",
    "lmfit>=1.2.2",
    "matplotlib>=3.8.0",
    "numpy>=1.24.4,<2.0.0",  # Numba compat
    "numba>=0.57.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "umap-learn>=0.5.5",
    "tqdm>=4.66.1",
    "seaborn>=0.12.2",
    "plotly>=5.17.0",
    "altair>=5.1.1",
    "jupyterlab>=4.0.6",
    "jupyter-dash>=0.4.2",
    "Werkzeug>=2.2.3",
    "Flask>=2.2.5",
]

[tool.hatch.build.targets.wheel]
packages = ["sigma"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["sigma"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
